* Add material design data point table example
* Convert statistics tables directives to use material design tables
* Load translations up-front in mdAdmin so they can be used by translation filter
* Disable angular debug info in mdAdmin app and add option to bootstrap
* Update documentation and add more comments to example code

*Version 3.0.1*
* Update demo virtual data sources JSON file
* Slight tweak of color scheme
* Updates to examples
* Add JavaScript Math library to root scope of maDashboards app
* Add timeout attribute to ma-point-values and ma-point-statistics directives
* Improve boostrap.js to allow more configuration for bootstrapping app
* Add a templates section to the menu and add more template examples
* Add page explaining how to create a dashboard in overrides
* Add a bare bones angular material admin template
* Add ma-point-hierarchy directive and examples
* Include md-data-table in maMaterialDashboards

*Version 3.0.0*
* Complete rebuild of the module to use AngularJS and Material Design Template
* Moved from JavaScript v2 Library to Mango 3.0 Angular library
* Added Material Design Template with many example pages
* Added live code editing windows for live experimenting and testing
* Changed default URL of the modules icon to point to the new Material Design template and example pages
* Note: The module still supports Boostraps for now.  Changes to existing custom dashboards using JavaScript v2 library may need changes to continue to function.
* See additional documentation and links within the modules pages.
* Added Last-Modified header to /mango-javascript/ mapped resources

*Version 1.1.3*
* Adding Angular API
* Adding Angular icon and page for evaluating new directives

*Version 1.1.2*
* Improving permissions utils for javascript User class
* Adding CORS login test/example page
* Adding api.js method to contact data source to force refresh a data point 

*Version 1.1.1*
* Adding additional examples