@@ -74,6 +74,7 @@ dashboards.v3.dox.displayTree=Display tree
 dashboards.v3.dox.dataPointTable=Data point table
 dashboards.v3.dox.buildPointArray=Build point array
 dashboards.v3.dox.adminTemplate=Admin template
+dashboards.v3.dox.loginPageTemplate=App with login page
 
 dashboards.v3.app.noPointsFound=No points matching {0} were found
 dashboards.v3.app.searchBy=Search {0} by {1}
