@@ -1,0 +1,34 @@
+<md-card>
+	<form name="loginForm">
+	<md-card-title>
+	  <md-card-title-text>
+	    <span class="md-headline" ma-tr="login.pleaseSignIn"></span>
+	  </md-card-title-text>
+	</md-card-title>
+	<md-card-content>
+		<md-input-container class="md-icon-float md-block">
+	      <label for="username" ma-tr="login.userId"></label>
+          <md-icon>person</md-icon>
+	      <input id="username" name="username" ng-model="username" type="text" autofocus required md-no-asterisk aria-label="{{'login.userId'|tr}}">
+	      <div ng-messages="loginForm.name.$error">
+	        <div ng-message="required" ma-tr="login.validation.noUsername"></div>
+	      </div>
+	    </md-input-container>
+	    <md-input-container class="md-icon-float md-block">
+          <label for="username" ma-tr="login.password"></label>
+          <md-icon>vpn_key</md-icon>
+	      <input id="password" name="password" ng-model="password" type="password" required md-no-asterisk aria-label="{{'login.password'|tr}}">
+	      <div ng-messages="loginForm.password.$error">
+	        <div ng-message="required" ma-tr="login.validation.noPassword"></div>
+	      </div>
+	    </md-input-container>
+	  <div ng-messages="errors">
+         <div ng-message="invalidLogin" ma-tr="login.validation.invalidLogin"></div>
+		 <div ng-message="otherError" ma-tr="login.error" ma-tr-args="[otherError]"></div>
+      </div>
+	</md-card-content>
+	<md-card-actions layout="row" layout-align="end center">
+      <md-button type="submit" ng-click="doLogin()" ma-tr="login.loginButton" class="md-accent" aria-label="{{'login.loginButton'|tr}}"></md-button>
+    </md-card-actions>
+    </form>
+</md-card>
