@@ -1,0 +1,44 @@
+{
+    "name": "Single Page App with Login",
+    "short_name": "SPA w Login",
+    "start_url": "./#/dashboard/home",
+    "display": "standalone",
+    "icons": [
+        {
+            "src": "../img/icon36.png",
+            "sizes": "36x36",
+            "type": "image/png",
+            "density": 0.75
+        },
+        {
+            "src": "../img/icon48.png",
+            "sizes": "48x48",
+            "type": "image/png",
+            "density": 1.0
+        },
+        {
+            "src": "../img/icon72.png",
+            "sizes": "72x72",
+            "type": "image/png",
+            "density": 1.5
+        },
+        {
+            "src": "../img/icon96.png",
+            "sizes": "96x96",
+            "type": "image/png",
+            "density": 2.0
+        },
+        {
+            "src": "../img/icon144.png",
+            "sizes": "144x144",
+            "type": "image/png",
+            "density": 3.0
+        },
+        {
+            "src": "../img/icon192.png",
+            "sizes": "192x192",
+            "type": "image/png",
+            "density": 4.0
+        }
+    ]
+}
