@@ -1,0 +1,5 @@
+<h1>Single Page App with Login</h1>
+
+<p>You have reached the home page! You are logged in as {{user.username}}.</p>
+<p><a ui-sref="dashboard.page1">Go to page 1.</a></p>
+<p><a ui-sref="login">Go to the login page.</a></p>
