@@ -1,0 +1,3 @@
+<div flex layout="row">
+  <md-content ui-view flex="100" flex-gt-sm="50" flex-offset-gt-sm="25"></md-content>
+</div>
