@@ -1,0 +1,3 @@
+<h1>Page 1</h1>
+<p>This is page 1.</p>
+<p><a ui-sref="dashboard.home">Back to home page</a></p>
