@@ -1,0 +1,4 @@
+<div flex layout="column" layout-align="start center">
+    <img ng-src="../img/logo.png" class="login-logo">
+	<login></login>
+</div>
