@@ -1,0 +1,24 @@
+<h1 ma-tr="dashboards.v3.dox.loginPageTemplate"></h1>
+
+<p>This template is an app with two content pages, and a login page.
+It uses <a href="https://angular-ui.github.io/ui-router/" target="_blank">UI Router 0.2.x</a> to associate 'states' with
+URLs and HTML views.</p>
+
+<p>Copy the entire <code>${MA_HOME}/web/modules/dashboards/web/loginPageTemplate</code> folder into the
+<code>${MA_HOME}/overrides/web/modules/dashboards/web</code> directory,
+give it a new name then customize the states and other behavior by editing <code>app.js</code> (shown below).</p>
+
+<p>You will need to change the require line at the bottom of <code>index.html</code> to suit the name of the folder you create in overrides.</p>
+
+<p>You can add your own views, controllers, directives and filters. You may also want to define some of the constants shown
+on the <a ui-sref="dashboard.examples.templates.extendApp">extend app</a> page</p>
+
+<p><a href="../loginPageTemplate/" target="_blank">Click here to view the template.</a></p>
+
+<md-card>
+    <md-card-content layout="column">
+        <div flex>
+            <div style="height:400px" live-editor="template1" src="../loginPageTemplate/app.js" mode="javascript"></div>
+        </div>
+    </md-card-content>
+</md-card>
