@@ -8,6 +8,7 @@
 * Load translations up-front in mdAdmin so they can be used by translation filter
 * Disable angular debug info in mdAdmin app and add option to bootstrap
 * Update documentation and add more comments to example code
+* Add single page app template with login page
 
 *Version 3.0.1*
 * Update demo virtual data sources JSON file
